--- a/main.tex
+++ b/main.tex
@@ -94,6 +94,7 @@
 \subfile{prispevky/120-Trasovani/main.tex}
 \newpage \thispagestyle{empty} \mbox{} \newpage
 \subfile{prispevky/130-Compliance/main.tex}
+\newpage \thispagestyle{empty} \mbox{} \newpage
 
 \subfile{prispevky/150-Zmeny_chovani/main.tex}
 
