--- a/prispevky/030-Co_na_cem_zavisi/main.tex
+++ b/prispevky/030-Co_na_cem_zavisi/main.tex
@@ -71,6 +71,8 @@ kontaktů (příčina K, která sama může a nemusí mít za příčinu C či
 J) a redukci rizikovosti existujících kontaktů, například nošením roušek (příčina
 R). 
 
+\newpage
+
 Nyní proberme jednotlivá Hillova kritéria.
 \begin{enumerate}
 \item \emph{Síla efektu: čím přesvědčivější statistická evidence, tím spíš
