--- a/prispevky/065-Nekolik_poznamek/main.tex
+++ b/prispevky/065-Nekolik_poznamek/main.tex
@@ -4,6 +4,8 @@
 \textit{Martin Šmíd}
 \vspace{15mm}
 
+\section*{Úvod}
+
 \noindent Očkování je zatím nejúčinnějším a zároveň jedním z~nejméně kontroverzních pro\-střed\-ků boje proti současné pandemii. Čím více lidí bude naočkováno,
 tím více stávajících opatření může být zrušeno, a pokud bude dosaženo určité kritické meze, v~principu nebude potřeba žádných opatření. V~epidemickém modelování se zmi\-ňo\-va\-né kritické mezi říká {\em práh kolektivní imunity} a vypočítá se jako $H=\frac{1}{R_0}$, kde $R_0$ je základní reprodukční číslo. Proč se $H$ vypočítá právě takto, je nasnadě: pokud je vůči infekci místo celé populace vnímavý pouze její poměr $h$, potom každý infekční jedinec nakazí místo $R_0$ osob pouze $h R_0$, takže při $h < H$ epidemie postupně vymizí. V~našem případě je situace složitější, protože vakcína neposkytuje stoprocentní ochranu a kromě toho je třeba vzít v~úvahu, že určitá část populace je imunní díky prodělané nemoci. Navíc je reprodukční číslo v~praxi uměle snižováno protiepidemickými opatřeními, na druhou stranu se nakažlivost SARS-CoV-2 kvůli mutacím postupně zvyšuje. 
 
