--- a/prispevky/080-Logistika_ockovani/main.tex
+++ b/prispevky/080-Logistika_ockovani/main.tex
@@ -384,7 +384,7 @@ Jak je vidět v~grafu \ref{gr_models_delta}, MOD2 byl schopen v~úvodních dnech
 
 Na základě provedené analýzy pokládáme za nejdůležitější dvě zjištění.
 \begin{enumerate}
-\item I~na základě poměrně jednoduchého předpokladu spočívajícího v~nikdy neklesajících kapacitách očkovacích míst (\emph{MOD1}) lze v~modelovaném světě navyšovat proočkovanost skupiny 1.A významně rychleji, než se tomu dělo v~reálném světě (viz zejména  \ref{gr_mod_prvni_davka}). V~tomto kontextu dává smysl se ptát, zda by v~případě reálného proběhnutí očkování (nejrizikovější) skupiny 1.A bylo možné ušetřit dodatečné životy a kolik lidských životů by tak bylo možné zachránit.
+\item I~na základě poměrně jednoduchého předpokladu spočívajícího v~nikdy neklesajících kapacitách očkovacích míst (\emph{MOD1}) lze v~modelovaném světě na\-vy\-šo\-vat proočkovanost skupiny 1.A významně rychleji, než se tomu dělo v~reálném světě (viz zejména  \ref{gr_mod_prvni_davka}). V~tomto kontextu dává smysl se ptát, zda by v~případě reálného proběhnutí očkování (nejrizikovější) skupiny 1.A bylo možné ušetřit dodatečné životy a kolik lidských životů by tak bylo možné zachránit.
 \item Náběh očkovací kampaně byl pomalý nejen co do proočkovanosti 1.A, ale i podílu využitých versus skladovaných dávek (\ref{gr_mod_vyockovanost}). Dostupných dávek bylo tedy tehdy více než pacientů připravených nechat se očkovat. Otázka je, zda mohl stát (například formou dřívější přípravy kampaně) zajistit, aby čekajících (připravených) pacientů bylo ideálně stejně či více než dostupných vakcín.
 \end{enumerate}
 Faktory potenciálně stojící za dvěma zjištěními rozebíráme v~následujících sekcích textu.
