--- a/prispevky/085-Nove_vyzvy/main.tex
+++ b/prispevky/085-Nove_vyzvy/main.tex
@@ -18,6 +18,7 @@ Pandemie onemocnění covid-19 ukázala nám všem, že se bez dobrého vládnut
 
 Koronavirus ostře nasvítil obecnější problémy vládnutí, kterých si je stát dlouhodobě vědom. Například strategie \uv{Klientsky orientovaná veřejná správa} schválená vládou na jaře 2020 konstatuje, že „instituce veřejného sektoru postrádají rychlost a přizpůsobivost, aby udržely krok v~rychle se měnícím světě“ \cite{ministerstvo_pro_mistni_rozvoj_cr_ministerstvo_2020}, výroční zpráva NKÚ za rok 2020 též upozorňuje na „chybějící schopnost státu jednat cíleně a systematicky“ \cite{nejvyssi-kontrolni-urad_vyrocni_2020}. Negativně vychází ČR i z~mezinárodních žebříčků v~této oblasti \cite{wef_global_2019}. Přesto zde vidíme naději na změnu. Pandemie covid-19 ukázala, jak důležitý je funkční stát, a tím důrazně připomněla nutnost zásadních reforem vládnutí. Jako každá krize může být covid-19 katalyzátorem změn. Aby ke změně doopravdy došlo, je ale třeba analyzovat, co se stalo a které aspekty vládnutí je nutno do budoucna změnit.
 
+\newpage 
 
 Cílem tohoto textu je použít přípravu a provedení očkování v~ČR jako případovou studii pro fungování státu. Na příkladu očkování chceme ukázat, jak je potřeba změnit systém vládnutí a fungování veřejné správy tak, aby byl připraven nejen na případnou další krizi podobnou pandemii, ale i obecněji na výzvy 21. století. Naším záměrem není hledat viníky, ale nabídnout úvahu nad systémem a jeho zlepšením.
 
@@ -27,6 +28,7 @@ Očkování je totiž příkladem nového typu výzev. Mají čtyři společné 
 
 V~rámci BISOP jsme se očkováním zabývali dlouhodobě od prosince 2020, spolu s~kolegy jsme napsali více než 20 textů na toto téma. Pro tento článek používáme veřejně dostupná data a mediální výstupy. Na základě naší analýzy navrhujeme čtyři hlavní oblasti, na které doporučujeme se zaměřit při reformě vládnutí. V~textu je postupně rozebíráme a uvádíme příklady jak z~ČR, tak ze zahraničí. Jako příklad používáme zejména přípravu očkování ve Velké Británii, která je v~této oblasti pozitivně hodnocena. Jsme si ale vědomy, že situace v~Británii je v~mnohém jiná. Nepokoušíme se tedy o~přímé srovnání, nýbrž o~inspiraci obecnými mechanismy a~typy řešení.
 
+\newpage
 
 Kvůli zaměření na možná zlepšení systému jsou v~textu výrazněji představeny ty aspekty, které se v~procesu přípravy očkování v~ČR nepovedly. Tím však nechceme zpochybnit zásluhy mnoha lidí na různých úrovních veřejné správy a dalších organizací, kteří pracovali na přípravě a provádění očkování s~obrovským nasazením a zasloužili se tak o~mnohé úspěchy. Naším cílem je představit oblasti možného zlepšení, tak abychom byli na další komplexní výzvy jako stát lépe připraveni.
 
@@ -116,6 +118,8 @@ Možná reforma by tedy měla obsahovat následující komponenty:
   \item[Kultura:] Změna organizační kultury ve veřejné správě a vytvoření prostředí, kde je možné riskovat a dělat \uv{chyby}.
   \item[Komunikace a očekávání:] Otevřená komunikace s~celým ekosystémem (NKÚ, média, politici, veřejnost, nevládní organizace) o~vhodné míře rizika a jejich důvodech.
 \end{description}
+
+\newpage
 
 \section*{Kompetence pro 21. století -- správní lidé \\ na správném místě}
 
