--- a/prispevky/090-Evaluace_politik/main.tex
+++ b/prispevky/090-Evaluace_politik/main.tex
@@ -125,7 +125,7 @@ trasování nebo karanténa.
 
 Více podrobností o~samotném modelu M a sestrojení grafu kontaktů lze nalézt v~\cite{M-techrep2021}.
 
-\emph{Simulace epidemiologických opatření.} Popsaný model M umožňuje prostřednictvím {\em policy} modulu simulaci různorodých epidemiologických opatření.
+\emph{Simulace epidemiologických opatření.} Popsaný model M umožňuje pro\-stře\-dnic\-tvím {\em policy} modulu simulaci různorodých epidemiologických opatření.
 
 Protektivní opatření (rozestupy, roušky apod.) realizujeme v~modelu
 redukcí parametru $\beta$, který reprezentuje nakažlivost nemoci.
