--- a/prispevky/120-Trasovani/main.tex
+++ b/prispevky/120-Trasovani/main.tex
@@ -3,6 +3,7 @@
 
 \textit{Jakub Drbohlav, Eva Blechová}
 \vspace{15mm}
+\vspace{-1eM}
 
 \section*{Úvod}
 
@@ -29,6 +30,8 @@ Naším hlavním zdrojem jsou data reportingu trasování. Tým Chytré karanté
 Pro zahraniční srovnání využíváme obdobná veřejně dostupná data reportingu trasování s~uvedením zdroje.
 
 Kromě primárních dat využíváme rešerše zahraniční praxe a rešerše veřejných vyjádření osob odpovědných za systém trasování v~ČR, veřejných dokumentů vlády a zveřejněného dokumentu doporučení pro prevenci druhé vlny covid-19 z~27. května 2020.
+
+\newpage
 
 Dále se budeme věnovat:
 \begin{itemize}
@@ -175,7 +178,7 @@ Několik dalších zemí též pravidelně zveřejňuje indikátor rychlosti tra
 
 \paragraph{Počet identifikovaných rizikových kontaktů.} Zatímco počet obvolaných pozitivních případů a identifikovaných kontaktů do 24 h vyjadřuje efektivitu využívání kapacit programu, počet identifikovaných rizikových kontaktů představuje indikátor kvality trasovacího hovoru.
 
-Definice rizikového kontaktu se v~průběhu epidemie měnila -- na začátku pandemie se jednalo o~kontakt ve vzdálenosti 2 metry s~trváním nejméně 15 minut, v září 2020 byla tato definice upravena (kontakt nebyl považován za rizikový pokud jedna z~osob měla zakryté dýchací cesty \cite{tr_MZCR}. K~29. květnu 2021 je rizikový kontakt definován jako kontakt na méně než 2 metry, při kterém alespoň jedna osoba nemá náležitou ochranu dýchacích cest. Časový údaj již není blíže definován. Z~této definice jsou vyjmuty naočkované osoby a osoby, které prodělaly covid-19 v~posledních šesti měsících \cite{tr_covidgov}.
+Definice rizikového kontaktu se v~průběhu epidemie měnila -- na začátku pandemie se jednalo o~kontakt ve vzdálenosti 2 metry s~trváním nejméně 15 minut, v~září 2020 byla tato definice upravena (kontakt nebyl považován za rizikový pokud jedna z~osob měla zakryté dýchací cesty \cite{tr_MZCR}. K~29. květnu 2021 je rizikový kontakt definován jako kontakt na méně než 2 metry, při kterém alespoň jedna osoba nemá náležitou ochranu dýchacích cest. Časový údaj již není blíže definován. Z~této definice jsou vyjmuty naočkované osoby a osoby, které prodělaly covid-19 v~posledních šesti měsících \cite{tr_covidgov}.
 
 Průměrný počet identifikovaných rizikových kontaktů osciloval od začátku reportingu v~říjnu 2020 na úrovni 0,8--1,3 rizikových kontaktů na jednoho pozitivního. Mezi listopadem 2020 a dubnem 2021 na úrovni 0,8--1,0. Počet identifikovaných rizikových kontaktů začal výrazněji růst na konci dubna 2021 a v~květnu se blížil hodnotě 1,3.
 
