--- a/prispevky/130-Compliance/main.tex
+++ b/prispevky/130-Compliance/main.tex
@@ -100,7 +100,12 @@ O~využívání nástroje sebereportování před samotným telefonickým rozhov
 
 Poslední otázka kopírující náš předchozí výzkum se týkala využívání aplikace eRouška -- jen 15 \% z~celkových 1975 respondentů uvedlo, že má nainstalovanou aplikaci eRouška. Shodně 15 \% uvedlo, že tuto aplikaci měli nainstalovanou dříve, nyní ne. Zbylých 70 \% respondentů ji nepoužilo nikdy. Lidé do 34 let si eRoušku často smazali z~mobilu. 
 
+\vspace{-0.6eM}
+
 \section*{Diskuse}
+
+\vspace{-0.3eM}
+
 \paragraph*{Psychologické hypotézy o~nižší compliance při trasování.}
 Spokojenost res\-pon\-den\-tů  s~průběhem a kvalitou trasování je v~kontrastu s~tím, že lidé při trasování hlásí výrazně méně kontaktů, než by indikovala data ze sociologických průzkumů \cite{Prokop2020a}. V~této sekci představujeme možné psychologické přístupy, skrze něž je možné na výše uvedená data a problematiku compliance nahlížet.  
 
@@ -119,6 +124,8 @@ Vztah mezi intencí a chováním samotným je také ovlivněn reálnou kontrolou
 \end{figure}
 
 Subjektivní normy jsou vytvářeny na základě informací o~tom, jak se chová většina společenské skupiny daného jedince v~interakci s~dalšími již existujícími normami \cite{Ajzen1991}. Tato představa však může být zkreslená, například kvůli relativně uzavřeným skupinám na sociálních sítích, tzv. sociálním bublinám \cite{Gonzalez-Padilla2020}. Sociální bubliny jsou propojené skupiny lidí s~podobnými názory a zájmy. To vede k~přenášení jen určitých informací. Sociální bubliny tak mohou mít negativní dopad na compliance, protože se v~nich mohou přenášet informace pouze z~určitých zdrojů, což posiluje selektivní vidění světa \cite{Gonzalez-Padilla2020,Pariser2012TheFB}. 
+
+\newpage
 
 Jednou z~cest, jak zvýšit compliance, tedy může být navození pocitu, že většina lidí opatření dodržuje. V~kontextu trasování se může otázka na počet rizikových kontaktů dát do vztahu k~datům z~průzkumů, např.: „Data z~České republiky ukazují, že aktuální průměr je 13 kontaktů za týden. Řekl/a byste, že jste se za stejnou dobu setkal/a s~menším, nebo větším počtem lidí?“ Mimo ovlivnění subjektivní normy může tento způsob fungovat také jako forma kotvení (v~anglickém překladu anchoring), kognitivního bias, při kterém máme tendenci vztahovat (kotvit) odpovědi na určitou informaci \cite{Tversky1974}.
 
@@ -146,7 +153,11 @@ V~odpovědích respondentů se opakovala větší obeznámenost praktického lé
 Dalším odrazujícím faktorem je pro řadu lidí neznámé prostředí a organizační nároky spojené s~cestou na očkovací místo. „Svého doktora mám v~docházkové vzdálenosti, nemusím zbytečně cestovat MHD nebo obtěžovat své děti, aby mě dovezly.“ Při rozhodování je relevantní obava z~toho, že se jedinec na rušném místě nakazí: „Raději si počkám na očkování u~svého obvodního lékaře, protože se bojím, abych se v~nemocnici sama covidem nenakazila…“
 Od organizace k~očko\-vá\-ní ve velkokapacitním místě pak seniory odrazují komplikace spojené s~telefonováním. „Nepamatuji si, na co beru léky, nechci kvůli tomu volat obvoďákovi a pak to vyplňovat na papíru k~očkování.“ Telefonické konzultace s~praktikem a odpovědnost za správné vyplnění všech formulářů ve velkokapacitním centru vnímají senioři jako problém. Jako další senioři uvádějí shlukování velkého množství lidí, od kterého si za doby pandemie dále odvykli. „Z nemocnice mám obavy, určitě tam bude hodně lidí. U~svého praktika to znám.“ Často navíc osoby k~praktikovi docházejí pravidelně pro léky či na kontrolu, a očkování by se tedy spojilo s~již naplánovanou kontrolou.
 
+\vspace{-0.7eM}
+
 \section*{Diskuse}
+
+\vspace{-0.4eM}
 
 \paragraph*{K výsledkům kvalitativního šetření k~očkování seniorů.}
 Z~výsledků našeho šetření vyplývá, že preference respondentů nechat se očkovat u~praktického lékaře byla ovlivněna především důvěrou a pocitem bezpečí. V~březnu/dubnu 2021 k~nám z~médií přicházely negativní zprávy o~možných zdravotních komplikacích spojených s~očkováním \cite{Svamberk2021,MinisterstvoZdravotnictviCR2021a}. Je samozřejmě důležité, aby byla ve\-řej\-nost informovaná, ovšem zjednodušující výstupy vytržené z~kontextu vyvolávají emoce strachu a zejména u~seniorů snižují důvěru v~bezpečí očkování jako takového. Přitom čísla mluví jasně – rizika spojená s~očkováním jsou nesrovnatelně nižší než rizika spojená s~onemocněním \cite{Statniustavprokontroluleciv2021}. 
