--- a/prispevky/150-Zmeny_chovani/main.tex
+++ b/prispevky/150-Zmeny_chovani/main.tex
@@ -220,8 +220,11 @@ Třetí linie grafu ukazuje, že k dalšímu omezení o~1 až 1,5 kontaktu u~pr
     \label{fig:zbp5}
 \end{figure}
 
+\vspace{-0.8eM}
 
 \section*{Obrana před epidemií: Očkování a testování}
+
+\vspace{-0.4eM}
 
 Ke dvěma formám obrany před epidemií, které nevedou cestou restrikce aktivit s velkým dopadem na ekonomiku a well-being obyvatel, patří očkování a správná strategie testování. Respondenti \uv{Života během pandemie} byli poprvé dotazováni na zájem o~očkování koncem září, kdy ochotu nechat se zdarma naočkovat proti nemoci covid-19 projevilo 56\,\% dospělých. Následně v rámci stejného panelu respondentů došlo k propadu ochoty, který podle dat souvisel s nárůstem obav z vedlejších účinků vakcín, ale i s nárůstem velmi kritického postoje k institucím a řešení epidemie. Od začátku roku 2021 však ochota k očkování stoupala. Na konci května 2021 souhlas projevily dvě třetiny dospělých (67\,\%), z nichž přibližně 43\,\% již dostalo alespoň jednu dávku vakcíny. 
 
@@ -251,7 +254,7 @@ Počet respondentů, kteří jsou prokazatelně alespoň částečně imunní, z
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=\textwidth]{./pic/zbp-graf7.png}
+    \includegraphics[width=0.85\textwidth]{./pic/zbp-graf7.png}
     \caption{Vývoj odhadovaného počtu kontaktů (osobně, min. 5 minut) – v daných týdnech.}
     \label{fig:zbp7}
 \end{figure}
@@ -267,6 +270,8 @@ Analýza dat \uv{Života během pandemie} ukazuje, že epidemie covid-19 v Čes
 I~pro pochopení vývoje epidemie jsou potřeba sociologické výzkumy. V Česku ukazují například relativně omezené využívání home office a velmi krátkodobou redukci setkávání se s širší rodinou a přáteli, která ve většině vln epidemie trvala jen zhruba 1,5 měsíce. Modelování ze sociologických dat přitom ukazuje, že právě při setkávání s přáteli a rodinou a v práci se odehrávala většina kontaktů – a to zejména v době, kdy řada volnočasových aktivit byla omezena. Toto modelování může také dávat návod, kde existuje místo pro efektivní protiepidemická opatření. Již od konce podzimu například bylo zřejmé, že musí cílit na omezení rizikovosti přenosu v zaměstnání, kde se v době restrikcí volného času a sociálního života odehrávala téměř polovina sociálních kontaktů.
 
 Sociologická data jsou ale klíčová i pro plánování očkování a kampaní na jeho podporu – už v průběhu jara ukazovala dva potenciální problémy. Prvním jsou bariéry části starší a méně vzdělané populace v přístupu k očkování, kdy roli může hrát nižší digitální gramotnost a informovanost, podpora okolí (méně vzdělaní senioři mají často méně vzdělané děti, které očkování častěji nevěří), menší důvěra k expertům/institucím, schopnost dojíždět i menší očekáváné výnosy. Druhým je omezená ochota lidí do 54 let bez maturity k očkování. Řešení těchto dvou problémů přitom vyžaduje zcela odlišné přístupy.
+
+\newpage
 
 Výrazně vyšší míra nadměrných úmrtí v postkomunistické Evropě má vedle zdravotních příčin pravděpodobně také sociální.\footnote{Podrobně se jim věnuje esej Daniela Prokopa v~Salonu Práva: \url{https://www.novinky.cz/kultura/salon/clanek/esej-daniela-prokopa-proc-vychod-prohrava-s-covidem-40354453}} Patří mezi ně průmyslová struktura ekonomiky a omezené možnosti využívání home office, výrazné zastoupení vícegeneračních domácností (průměrný věk odchodu z domova je v postkomunistické Evropě mezi 26 a 31 lety a ve Skandinávii mezi 18 a 21 lety), a tím snazší mezigenerační přenos viru. Ale také restriktivnější nastavení veřejných politik (náhradový poměr v karanténách a izolacích s covid-19 okolo 60\,\% odrazující od testování) a související nižší důvěra k~institucím, s~výraznějším projevem při dlouho trvající epidemii.
 
